--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,2 +1,6 @@
 @import 'tailwindcss';
 @plugin 'daisyui';
+
+:root:has(:is(.modal-open, .modal:target, .modal-toggle:checked + .modal, .modal[open])) {
+  scrollbar-gutter: auto;
+}
